# compM080-compGV18

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
IGLFramework/: CMakeLists.txt  main.cpp  setup.bat  setup.sh
IGLFramework/docs/html/: annotated.html  classacq_1_1_cloud_manager-members.html  classacq_1_1_cloud_manager.html  classacq_1_1_cloud_manager.js  classacq_1_1_decorated_cloud-members.html  classacq_1_1_decorated_cloud.html  classacq_1_1_decorated_cloud.js  cloud_manager_8cpp.html  cloud_manager_8cpp__incl.map  cloud_manager_8cpp__incl.md5  cloud_manager_8cpp_source.html  cloud_manager_8h.html  cloud_manager_8h__dep__incl.map  cloud_manager_8h__dep__incl.md5  cloud_manager_8h__incl.map  cloud_manager_8h__incl.md5  cloud_manager_8h_source.html  cloud_manager_8hpp.html  cloud_manager_8hpp__dep__incl.map  cloud_manager_8hpp__dep__incl.md5  cloud_manager_8hpp__incl.map  cloud_manager_8hpp__incl.md5  cloud_manager_8hpp_source.html  decorated_cloud_8cpp.html  decorated_cloud_8cpp__incl.map  decorated_cloud_8cpp__incl.md5  decorated_cloud_8cpp_source.html  decorated_cloud_8h.html  decorated_cloud_8h__dep__incl.map  decorated_cloud_8h__dep__incl.md5  decorated_cloud_8h__incl.map  decorated_cloud_8h__incl.md5  decorated_cloud_8h_source.html  decorated_cloud_8hpp.html  decorated_cloud_8hpp__dep__incl.map  decorated_cloud_8hpp__dep__incl.md5  decorated_cloud_8hpp__incl.map  decorated_cloud_8hpp__incl.md5  decorated_cloud_8hpp_source.html  dir_000003_000000.html  (+38 more)
IGLFramework/include/acq/: normalEstimation.h  (+1 more)
IGLFramework/src/: main.cpp  normalEstimation.cpp
(+9 files in other folders)
